modernizing some syntax/language features